# PhotoConsequences

./: Cargo.toml  LICENSE  PhotoConsequences.sln  README.MD  VSTImage.sln
.github/workflows/: dotnet-desktop.yml  rust.yml
PhotoConsequences/: AboutForm.Designer.cs  AboutForm.cs  EditorFrame.Designer.cs  EditorFrame.cs  HostCommandStub.cs  ImageProcessor.cs  InsertedPlugin.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PhotoConsequences.csproj  PluginRack.cs  ProcessingProgress.Designer.cs  ProcessingProgress.cs  Program.cs  Utils.cs  build-shared.bat  build.bat
PhotoConsequences/Properties/: Resources.Designer.cs  Resources.resx
VSTImage/: EditorFrame.Designer.cs  EditorFrame.cs  GlobalMouseHandler.cs  HostCommandStub.cs  ImageProcessor.cs  InsertedPlugin.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PluginChain.cs  PluginRack.cs  ProcessingProgress.Designer.cs  ProcessingProgress.cs  Program.cs  Utils.cs  VSTImage.csproj  build-shared.bat  build.bat
VSTImage/Properties/: Resources.Designer.cs  Resources.resx
src/: editor_wrapper.rs  egui_platform_winit.rs  image_generators.rs  image_utils.rs  main.rs  msgboxwrapper.rs  plugin_rack.rs  processing.rs  rack_thread.rs  renderer.rs  state_headless.rs  ui.rs  ui_enums.rs
src/interfaces/: cli.rs  gui.rs  mod.rs
src/models/: area.rs  mod.rs  operations.rs  ui_enums.rs
src/rack/: instance.rs  mod.rs
