[package]
name = "photoconsequences"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
egui_wgpu_backend = "0.19"
pollster = "0.2"
rand = "0.8.5"
egui = "0.19"
epi = "0.17"
wgpu = "0.13"
winit = { version = "0.27.3", default-features = false, features = ["x11"] }
egui_extras = "0.19.0"
image = "0.24.3"
rfd = "0.10.0"
anyhow = "1.0.59"
raw-window-handle = "0.5.0"
palette = "0.6.1"
zip = "0.6.2"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde_repr = "0.1"
base64 = "0.13.0"
webbrowser = "0.8.0"
copypasta = "0.8"

[target.'cfg(unix)'.dependencies]
messagebox-x11 = { git = "https://github.com/LaineZ/messagebox-x11" } 
[target.'cfg(windows)'.dependencies]
msgbox = "0.7.0"
[target.'cfg(target_os = "macos")'.dependencies]
msgbox = "0.7.0"